Finished Gloriana Military Focus (2-3 missing focuses)

--- a/maddenist stuffs/localisation/english/gup_general_l_english.yml
+++ b/maddenist stuffs/localisation/english/gup_general_l_english.yml
@@ -3495,7 +3495,7 @@
  ENG_royal_navy_budget:0 "Royal Navy Budget Injection"
  ENG_royal_navy_budget_desc:0 "In light of Kuromorimine's investments to her navy, additional funding must be given to modernize our own ships."
  ENG_shadow_factories:0 "Shadow Factories"
- ENG_shadow_factories_desc:0 "With war looming in the distnace, it is necessary we increase our manufacturing capacity. Constructing new factories will be untimely and slow. Using current ones may prove to be fruitful."
+ ENG_shadow_factories_desc:0 "With the 63rd tournament looming in the distnace, it is necessary we increase our manufacturing capacity. Constructing new factories will be untimely and slow. Using current ones may prove to be fruitful"
  ENG_royal_navy_requisition:0 "Royal Navy Requisition Service"
  ENG_royal_navy_requisition_desc:0 "The current navy is not enough for even an adequete defense. Turning to the public may prove beneficial for us."
  ENG_heart_of_oak:0 "Heart of Oak"
@@ -3506,3 +3506,27 @@
  ENG_Remembered_Not_Forgotten_desc:0 "Those who gave their lives in the last tournament will not have been in vain when conflict breaks out again. Gloriana must learn from its past lessons."
  ENG_Over_the_Hills:0 "Over the Hills and Far Away"
  ENG_Over_the_Hills_desc:0 "The war may not be on our home island, but it certrainly has reached our homes"
+ ENG_On_the_Beaches:0 "On the Beaches and in The Streets"
+ ENG_On_the_Beaches_desc:0 "All plans must be made in case our home island falls. All preparations must be made to defend it."
+ ENG_Lion_Roars:0 "The Lion Roars"
+ ENG_Lion_Roars_desc:0 "The time for our military to shine is now, in its finest moment, to defend the greatest threat to our school since the last tournament."
+ ENG_Captain_Best:0 "Captain Does Her Best"
+ ENG_Captain_Best_desc:0 "Our captain, [Root.GetLeader] will attempt to rally some of the best commanders and soldiers our prestigious school has to offer!"
+ ENG_chain_home:0 "Chain Home Defense Network"
+ ENG_chain_home_desc:0 "The latest technology advancements in radar shall aid us in our defenses. Construction of these new facilities is paramount to our security against Kuromorimine!"
+ ENG_air_ministry:0 "Air Ministry Reshuffling"
+ ENG_air_ministry_desc:0 "Gloriana's air service needs reorganizing. Changing the command structure shall allow it to respond to any air attacks."
+ ENG_Long_Way_Mukumbura:0 "It's a Long Way to Mukumbura"
+ ENG_Long_Way_Mukumbura_desc:0 "Our African territories are at a constant threat against our enemies. We must strengthen our southern colonies by sending in some of our finest troops beforehand."
+ ENG_Recruiting_Sargents:0 "Recruiting Sergeants"
+ ENG_Recruiting_Sargents_desc:0 "Maple has potential leaders that may rise the ranks for their respective school. We shall test their mettle on the battlefield for when the next tournament begins."
+ ENG_A_Rather_Light_Horse:0 "A Rather Light Horse"
+ ENG_A_Rather_Light_Horse_desc:0 "Our friends at the Orient seem keen to be bringing their horses to combat. We need all the help we can get and we shall put train them under our supervision."
+ ENG_Special_Operations_Division:0 "Special Operations Division"
+ ENG_Special_Operations_Division_desc:0 "The Rapid Pace of Science in the 20th century has only accelerated with the tournament. New studies in Nuclear and Biological Sciences may turn the tide of this war."
+ ENG_Operation_Vegetarian:0 "Operation Vegetarian"
+ ENG_Operation_Vegetarian_desc:0 "Anthrax, one of Earth's deadliest diseases, might prove to be useful against Kuromorimine."
+ ENG_Operation_Rice_Bowl:0 "Operation Rice Bowl"
+ ENG_Operation_Rice_Bowl_desc:0 "Rice - Asia's primary grain of cultivation. Its destruction might halt Chi-Ha-Tan's advance."
+ ENG_Race_For_Bomb:0 "Race For The Bomb"
+ ENG_Race_For_Bomb_desc:0 "Our spies have informed us that Kuromorimine is researching a destructive weapon. We must be the first to develop this weapon"
