Added Lousy War Localization

--- a/maddenist stuffs/localisation/english/gup_general_l_english.yml
+++ b/maddenist stuffs/localisation/english/gup_general_l_english.yml
@@ -3656,3 +3656,25 @@
     ##END OF AHISTORICAL FOCUSES
 
  ##ANOTHER LOUSY WAR FOCUSES##
+    ENG_Another_Lousy_War:0 "Another Lousy War"
+    ENG_Another_Lousy_War_desc:0 "The inevitable has happened, the war has begun. Our efforts have been in vain to delay or prevent the war, but the time has come to take up arms and call upon our dominion to rally to the banner of St. Gloriana and fight on to the bitter end."
+    ENG_Across_the_Atlantic:0 "Across the Atlantic"
+    ENG_Across_the_Atlantic_desc:0 "Our friends at the Atlantic are sympathetic to our cause. In order to gain their support, Rosehip has planned a trip to travel to Saunders in an effort to convince them to allow intervention to aid in the war effort."
+    ENG_War_Against_Tyranny:0 "War Against Tyranny"
+    ENG_War_Against_Tyranny_desc:0 "Our attempts to ensure peace has failed, and now Gloriana stands alone against the tyrants of Europe and Asia. It is time to awaken our sleeping ally, and rally all who are willing to our banner! Saunders will understand our message!"
+    ENG_The_Free_World:0 "The Free World"
+    ENG_The_Free_World_desc:0 "United with our ally Saunders, it is time to rally the entirety of the Americas to our cause. Together, we stand as one to liberate the world from the tyrants, and begin a new free world!"
+    ENG_Stay_in_the_Ring:0 "Stay in the Ring"
+    ENG_Stay_in_the_Ring_desc:0 "It is necessary we gather more allies from the other non-aligned schools in the war. While Rosehips detests Pravda, even she admits they will be necessary for Anti-Kuromorimine efforts, and she will be making it clear to them to stay in."
+    ENG_Opening_Home_Office:0 "Opening the Home Office"
+    ENG_Opening_Home_Office_desc:0 "With the opening of hostilities against ourselves, we must make the decision to expand the civil service from a normally troublesome section of the school council, into a far more dynamic force. Though we can't count on their loyalty, we can on their duty to Queen and Country."
+    ENG_Battle_of_Logistics:0 "Battle of Logistics"
+    ENG_Battle_of_Logistics_desc:0 "The other schools march on their stomachs. We, St. Gloriana, march with elegance, our tea in hand, and nothing motivates our lads more than a good brew with some biscuits and a nice blanket. With a proper logistical system, we can ensure our morale is at an all time high, and we shall punch through anyone who stands in our way."
+    ENG_Certain_Eventuality:0 "Certain Eventuality"
+    ENG_Certain_Eventuality_desc:0 "B.C Freedom has fallen. With her downfall, we stand alone in the continent, with only the seas to protect us from our growing enemy. These are dark times, and we must inform everyone of what will happen should the seas fail to protect us, and we must do whatever is necessary to prevail."
+    ENG_Like_Beans_on_Toast:0 "Like Beans on Toast"
+    ENG_Like_Beans_on_Toast_desc:0 "Both Ashur and Khatam have long enjoyed their own independence, but with the current geopolitical situation we may require adjustments to this situation."
+    ENG_Rally_the_Yanks:0 "Rally the Yanks"
+    ENG_Rally_the_Yanks_desc:0 "To help bolster Saunders' support to St. Gloriana, Darjeeling has decided to travel to the school and woo their leaders, strengthening our relations!"
+    
+    ##END OF LOUSY WAR FOCUSES##
