Re-localized "Love Is War" Focus

--- a/maddenist stuffs/localisation/english/gup_general_l_english.yml
+++ b/maddenist stuffs/localisation/english/gup_general_l_english.yml
@@ -3603,7 +3603,7 @@
    
     ##ROSEHIP BRANCH##
        ENG_love_is_war:0 "Love Is War"
-       ENG_love_is_war_desc:0 "As we in Gloriana say - All is far in love and war. Today is different. Today love is war, and to help us, we shall begin negotiations with Saunders in an alliance, to prepare against our enemies!"
+       ENG_love_is_war_desc:0 "Love is War! Whoever falls in love first loses! It seems Saunders has been eying on us recently. As such, we must see to prove they are willing to seek close relations with us, by making them fess up first."
        ENG_tackling_kmm:0 "Tackling Kuromorimine Aggression"
        ENG_tackling_kmm_desc:0 "The unjust aggression of Kuromorimine poses a threat not just to our security, but a challenge to the very ideals we stand for. To rally our people and secure international sympathy, we must launch a powerful propaganda campaign that highlight the perils of Kuromorimine's expansionist ambitions."
        ENG_across_seven_seas:0 "Across the Seven Seas"
